--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,32 @@ allprojects {
     }
 }
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'reactive-tiny'
+    publishedGroupId = 'pro.mezentsev'
+    libraryName = 'reactive-tiny'
+    artifact = 'reactive-tiny'
+    artifactId = 'reactive-tiny'
+    siteUrl = 'https://github.com/mezentsev/reactive-tiny'
+    gitUrl = 'https://github.com/mezentsev/reactive-tiny.git'
+    libraryDescription = 'Tiny Reactive implementation'
+    libraryVersion = '1.0.1'
+    developerId = 'mezentsev'
+    developerName = 'Vadim Mezentsev'
+    developerEmail = 'mezentsevvo@gmail.com'
+    licenseName = 'The MIT License'
+    licenseUrl = 'https://raw.githubusercontent.com/mezentsev/reactive-tiny/master/LICENSEE'
+    allLicenses = ["MIT"]
+
+    minSdkVersion = 15
+    targetSdkVersion = 26
+    compileSdkVersion = 26
+    supportLibVersion = "26.1.0"
+    junitVersion = "4.12"
+    robolectricVersion = "3.3.2"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
