--- a/reactive-sample/build.gradle
+++ b/reactive-sample/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "me.irbis.reactive"
-        minSdkVersion 15
-        targetSdkVersion 26
+        applicationId "pro.mezentsev.reactive"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "${rootProject.ext.libraryVersion}"
     }
 
     buildTypes {
@@ -24,6 +24,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation project(':reactive-tiny')
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation project(":reactive-tiny")
 }
