--- a/reactive-sample/src/main/AndroidManifest.xml
+++ b/reactive-sample/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.irbis.reactive.sample">
+    package="pro.mezentsev.reactive.sample">
 
     <application
         android:allowBackup="true"
@@ -7,7 +7,7 @@
         android:supportsRtl="true" >
 
         <activity
-            android:name="me.irbis.reactive.sample.ReactiveActivity"
+            android:name="pro.mezentsev.reactive.sample.ReactiveActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
