--- a/reactive-tiny/build.gradle
+++ b/reactive-tiny/build.gradle
@@ -21,6 +21,9 @@ android {
 dependencies {
     implementation "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
 
-    testImplementation "junit:junit:${rootProject.ext.junitVersion}"
+    testImplementation "junit:junit:4.12"
     testImplementation "org.robolectric:robolectric:${rootProject.ext.robolectricVersion}"
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
