Fixed bintray upload script

--- a/reactive-tiny/build.gradle
+++ b/reactive-tiny/build.gradle
@@ -25,5 +25,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:${rootProject.ext.robolectricVersion}"
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+if (project.rootProject.file('local.properties').exists()) {
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+    apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+}
