--- a/reactive-tiny/build.gradle
+++ b/reactive-tiny/build.gradle
@@ -19,10 +19,10 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
+    implementation "androidx.annotation:annotation:$rootProject.ext.appcompatVersion"
 
     testImplementation "junit:junit:4.12"
-    testImplementation "org.robolectric:robolectric:${rootProject.ext.robolectricVersion}"
+    testImplementation "org.robolectric:robolectric:$rootProject.ext.robolectricVersion"
 }
 
 if (project.rootProject.file('local.properties').exists()) {
